@@ -120,6 +120,7 @@ mock 0.8.0 is the last version that will support Python 2.4.
 * Improved repr for mocks
 * Improved repr for `Mock.call_args` and entries in `Mock.call_args_list`,
   `Mock.method_calls` and `Mock.mock_calls`
+* patch lookup is done at use time not at decoration time
 * In Python 2.6 or more recent, `dir` on a mock will report all the dynamically
   created attributes (or the full list of attributes if there is a spec) as
   well as all the mock methods and attributes.
@@ -158,6 +159,12 @@ mock 0.8.0 is the last version that will support Python 2.4.
 * Private attributes `_name`, `_methods`, '_children', `_wraps` and `_parent`
   (etc) renamed to reduce likelihood of clash with user attributes.
 * Added license file to the distribution
+
+
+2011/XX/XX Version 0.8.0 beta 4
+-------------------------------
+
+* patch lookup is done at use time not at decoration time
 
 
 2011/08/15 Version 0.8.0 beta 3
